# pomidor

./: README.md  pyproject.toml  requirements.txt
src/: app.py  main.py
src/gui/: tasklist.py  timer.py  toolbar.py  window_bar.py
